miniC.output
Terminals unused in grammar

   RELA
   EQLT
   ASNMT
   MULT
   ADDI


State 17 conflicts: 2 shift/reduce
State 19 conflicts: 2 shift/reduce
State 49 conflicts: 7 shift/reduce
State 51 conflicts: 7 shift/reduce
State 52 conflicts: 7 shift/reduce
State 53 conflicts: 7 shift/reduce
State 54 conflicts: 7 shift/reduce
State 55 conflicts: 7 shift/reduce
State 71 conflicts: 7 shift/reduce
State 97 conflicts: 10 shift/reduce
State 98 conflicts: 10 shift/reduce
State 121 conflicts: 1 shift/reduce
State 123 conflicts: 10 shift/reduce
State 124 conflicts: 10 shift/reduce
State 125 conflicts: 10 shift/reduce
State 126 conflicts: 10 shift/reduce
State 127 conflicts: 10 shift/reduce
State 128 conflicts: 10 shift/reduce
State 129 conflicts: 10 shift/reduce
State 130 conflicts: 10 shift/reduce
State 131 conflicts: 10 shift/reduce
State 132 conflicts: 10 shift/reduce
State 139 conflicts: 1 shift/reduce


Grammar

    0 $accept: PROGRAM $end

    1 PROGRAM: DECLARATION FUNCTION
    2        | DECLARATION
    3        | FUNCTION

    4 DECLARATION: INT IDENTIFIER ';' DECLARATION
    5            | FLOAT IDENTIFIER ';' DECLARATION
    6            | INT IDENTIFIER ';'
    7            | FLOAT IDENTIFIER ';'

    8 IDENTIFIER: ID '[' INTNUM ']' ',' IDENTIFIER
    9           | ID ',' IDENTIFIER
   10           | ID '[' INTNUM ']'
   11           | ID

   12 FUNCTION: INT ID '(' PARAMETER ')' COMPOUNDSTMT FUNCTION
   13         | INT ID '(' PARAMETER ')' COMPOUNDSTMT
   14         | FLOAT ID '(' PARAMETER ')' COMPOUNDSTMT FUNCTION
   15         | FLOAT ID '(' PARAMETER ')' COMPOUNDSTMT

   16 PARAMETER: INT IDENTIFIER PARAMETER
   17          | INT IDENTIFIER

   18 COMPOUNDSTMT: '{' DECLARATION STMT '}'
   19             | '{' STMT '}'

   20 STMT: ASSIGN STMT
   21     | ASSIGN
   22     | CALL STMT
   23     | CALL
   24     | RETURN EXPR STMT
   25     | RETURN EXPR
   26     | WHILE_S STMT
   27     | WHILE_S
   28     | FOR_S STMT
   29     | FOR_S
   30     | IF_S STMT
   31     | IF_S
   32     | COMPOUNDSTMT STMT
   33     | COMPOUNDSTMT

   34 ASSIGN: ID '[' EXPR ']' '=' EXPR ';'
   35       | ID '=' EXPR ';'

   36 CALL: ID '(' ARG ')' ';'
   37     | ID '(' ')' ';'

   38 ARG: EXPR ',' ARG
   39    | EXPR

   40 WHILE_S: WHILE '(' EXPR ')' STMT
   41        | DO STMT WHILE '(' EXPR ')' ';'

   42 FOR_S: FOR '(' ASSIGN ';' EXPR ';' ASSIGN ')' STMT

   43 IF_S: IF '(' EXPR ')' STMT ELSE STMT
   44     | IF '(' EXPR ')' STMT

   45 EXPR: INTNUM
   46     | FLOATNUM
   47     | UNOP
   48     | ADDIOP
   49     | MULTOP
   50     | RELAOP
   51     | EQLTOP
   52     | CALL
   53     | '(' EXPR ')'
   54     | ID_S

   55 UNOP: UNARY EXPR

   56 ADDIOP: EXPR '+' EXPR
   57       | EXPR '-' EXPR

   58 MULTOP: EXPR '*' EXPR
   59       | EXPR '/' EXPR

   60 RELAOP: EXPR '>' EXPR
   61       | EXPR '<' EXPR
   62       | EXPR ">=" EXPR
   63       | EXPR "<=" EXPR

   64 EQLTOP: EXPR "==" EXPR
   65       | EXPR "!=" EXPR

   66 ID_S: ID EXPR


Terminals, with rules where they appear

$end (0) 0
'(' (40) 12 13 14 15 36 37 40 41 42 43 44 53
')' (41) 12 13 14 15 36 37 40 41 42 43 44 53
'*' (42) 58
'+' (43) 56
',' (44) 8 9 38
'-' (45) 57
'/' (47) 59
';' (59) 4 5 6 7 34 35 36 37 41 42
'<' (60) 61
'=' (61) 34 35
'>' (62) 60
'[' (91) 8 10 34
']' (93) 8 10 34
'{' (123) 18 19
'}' (125) 18 19
error (256)
INTNUM (258) 8 10 45
FLOATNUM (259) 46
ID (260) 8 9 10 11 12 13 14 15 34 35 36 37 66
INT (261) 4 6 12 13 16 17
FLOAT (262) 5 7 14 15
FOR (263) 42
WHILE (264) 40 41
DO (265) 41
IF (266) 43 44
ELSE (267) 43
RELA (268)
EQLT (269)
RETURN (270) 24 25
ASNMT (271)
MULT (272)
ADDI (273)
UNARY (274) 55
">=" (275) 62
"<=" (276) 63
"==" (277) 64
"!=" (278) 65


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
PROGRAM (40)
    on left: 1 2 3, on right: 0
DECLARATION (41)
    on left: 4 5 6 7, on right: 1 2 4 5 18
IDENTIFIER (42)
    on left: 8 9 10 11, on right: 4 5 6 7 8 9 16 17
FUNCTION (43)
    on left: 12 13 14 15, on right: 1 3 12 14
PARAMETER (44)
    on left: 16 17, on right: 12 13 14 15 16
COMPOUNDSTMT (45)
    on left: 18 19, on right: 12 13 14 15 32 33
STMT (46)
    on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33, on right: 18
    19 20 22 24 26 28 30 32 40 41 42 43 44
ASSIGN (47)
    on left: 34 35, on right: 20 21 42
CALL (48)
    on left: 36 37, on right: 22 23 52
ARG (49)
    on left: 38 39, on right: 36 38
WHILE_S (50)
    on left: 40 41, on right: 26 27
FOR_S (51)
    on left: 42, on right: 28 29
IF_S (52)
    on left: 43 44, on right: 30 31
EXPR (53)
    on left: 45 46 47 48 49 50 51 52 53 54, on right: 24 25 34 35 38
    39 40 41 42 43 44 53 55 56 57 58 59 60 61 62 63 64 65 66
UNOP (54)
    on left: 55, on right: 47
ADDIOP (55)
    on left: 56 57, on right: 48
MULTOP (56)
    on left: 58 59, on right: 49
RELAOP (57)
    on left: 60 61 62 63, on right: 50
EQLTOP (58)
    on left: 64 65, on right: 51
ID_S (59)
    on left: 66, on right: 54


State 0

    0 $accept: . PROGRAM $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2

    PROGRAM      go to state 3
    DECLARATION  go to state 4
    FUNCTION     go to state 5


State 1

    4 DECLARATION: INT . IDENTIFIER ';' DECLARATION
    6            | INT . IDENTIFIER ';'
   12 FUNCTION: INT . ID '(' PARAMETER ')' COMPOUNDSTMT FUNCTION
   13         | INT . ID '(' PARAMETER ')' COMPOUNDSTMT

    ID  shift, and go to state 6

    IDENTIFIER  go to state 7


State 2

    5 DECLARATION: FLOAT . IDENTIFIER ';' DECLARATION
    7            | FLOAT . IDENTIFIER ';'
   14 FUNCTION: FLOAT . ID '(' PARAMETER ')' COMPOUNDSTMT FUNCTION
   15         | FLOAT . ID '(' PARAMETER ')' COMPOUNDSTMT

    ID  shift, and go to state 8

    IDENTIFIER  go to state 9


State 3

    0 $accept: PROGRAM . $end

    $end  shift, and go to state 10


State 4

    1 PROGRAM: DECLARATION . FUNCTION
    2        | DECLARATION .

    INT    shift, and go to state 11
    FLOAT  shift, and go to state 12

    $default  reduce using rule 2 (PROGRAM)

    FUNCTION  go to state 13


State 5

    3 PROGRAM: FUNCTION .

    $default  reduce using rule 3 (PROGRAM)


State 6

    8 IDENTIFIER: ID . '[' INTNUM ']' ',' IDENTIFIER
    9           | ID . ',' IDENTIFIER
   10           | ID . '[' INTNUM ']'
   11           | ID .
   12 FUNCTION: INT ID . '(' PARAMETER ')' COMPOUNDSTMT FUNCTION
   13         | INT ID . '(' PARAMETER ')' COMPOUNDSTMT

    '['  shift, and go to state 14
    ','  shift, and go to state 15
    '('  shift, and go to state 16

    $default  reduce using rule 11 (IDENTIFIER)


State 7

    4 DECLARATION: INT IDENTIFIER . ';' DECLARATION
    6            | INT IDENTIFIER . ';'

    ';'  shift, and go to state 17


State 8

    8 IDENTIFIER: ID . '[' INTNUM ']' ',' IDENTIFIER
    9           | ID . ',' IDENTIFIER
   10           | ID . '[' INTNUM ']'
   11           | ID .
   14 FUNCTION: FLOAT ID . '(' PARAMETER ')' COMPOUNDSTMT FUNCTION
   15         | FLOAT ID . '(' PARAMETER ')' COMPOUNDSTMT

    '['  shift, and go to state 14
    ','  shift, and go to state 15
    '('  shift, and go to state 18

    $default  reduce using rule 11 (IDENTIFIER)


State 9

    5 DECLARATION: FLOAT IDENTIFIER . ';' DECLARATION
    7            | FLOAT IDENTIFIER . ';'

    ';'  shift, and go to state 19


State 10

    0 $accept: PROGRAM $end .

    $default  accept


State 11

   12 FUNCTION: INT . ID '(' PARAMETER ')' COMPOUNDSTMT FUNCTION
   13         | INT . ID '(' PARAMETER ')' COMPOUNDSTMT

    ID  shift, and go to state 20


State 12

   14 FUNCTION: FLOAT . ID '(' PARAMETER ')' COMPOUNDSTMT FUNCTION
   15         | FLOAT . ID '(' PARAMETER ')' COMPOUNDSTMT

    ID  shift, and go to state 21


State 13

    1 PROGRAM: DECLARATION FUNCTION .

    $default  reduce using rule 1 (PROGRAM)


State 14

    8 IDENTIFIER: ID '[' . INTNUM ']' ',' IDENTIFIER
   10           | ID '[' . INTNUM ']'

    INTNUM  shift, and go to state 22


State 15

    9 IDENTIFIER: ID ',' . IDENTIFIER

    ID  shift, and go to state 23

    IDENTIFIER  go to state 24


State 16

   12 FUNCTION: INT ID '(' . PARAMETER ')' COMPOUNDSTMT FUNCTION
   13         | INT ID '(' . PARAMETER ')' COMPOUNDSTMT

    INT  shift, and go to state 25

    PARAMETER  go to state 26


State 17

    4 DECLARATION: INT IDENTIFIER ';' . DECLARATION
    6            | INT IDENTIFIER ';' .

    INT    shift, and go to state 27
    FLOAT  shift, and go to state 28

    INT       [reduce using rule 6 (DECLARATION)]
    FLOAT     [reduce using rule 6 (DECLARATION)]
    $default  reduce using rule 6 (DECLARATION)

    DECLARATION  go to state 29


State 18

   14 FUNCTION: FLOAT ID '(' . PARAMETER ')' COMPOUNDSTMT FUNCTION
   15         | FLOAT ID '(' . PARAMETER ')' COMPOUNDSTMT

    INT  shift, and go to state 25

    PARAMETER  go to state 30


State 19

    5 DECLARATION: FLOAT IDENTIFIER ';' . DECLARATION
    7            | FLOAT IDENTIFIER ';' .

    INT    shift, and go to state 27
    FLOAT  shift, and go to state 28

    INT       [reduce using rule 7 (DECLARATION)]
    FLOAT     [reduce using rule 7 (DECLARATION)]
    $default  reduce using rule 7 (DECLARATION)

    DECLARATION  go to state 31


State 20

   12 FUNCTION: INT ID . '(' PARAMETER ')' COMPOUNDSTMT FUNCTION
   13         | INT ID . '(' PARAMETER ')' COMPOUNDSTMT

    '('  shift, and go to state 16


State 21

   14 FUNCTION: FLOAT ID . '(' PARAMETER ')' COMPOUNDSTMT FUNCTION
   15         | FLOAT ID . '(' PARAMETER ')' COMPOUNDSTMT

    '('  shift, and go to state 18


State 22

    8 IDENTIFIER: ID '[' INTNUM . ']' ',' IDENTIFIER
   10           | ID '[' INTNUM . ']'

    ']'  shift, and go to state 32


State 23

    8 IDENTIFIER: ID . '[' INTNUM ']' ',' IDENTIFIER
    9           | ID . ',' IDENTIFIER
   10           | ID . '[' INTNUM ']'
   11           | ID .

    '['  shift, and go to state 14
    ','  shift, and go to state 15

    $default  reduce using rule 11 (IDENTIFIER)


State 24

    9 IDENTIFIER: ID ',' IDENTIFIER .

    $default  reduce using rule 9 (IDENTIFIER)


State 25

   16 PARAMETER: INT . IDENTIFIER PARAMETER
   17          | INT . IDENTIFIER

    ID  shift, and go to state 23

    IDENTIFIER  go to state 33


State 26

   12 FUNCTION: INT ID '(' PARAMETER . ')' COMPOUNDSTMT FUNCTION
   13         | INT ID '(' PARAMETER . ')' COMPOUNDSTMT

    ')'  shift, and go to state 34


State 27

    4 DECLARATION: INT . IDENTIFIER ';' DECLARATION
    6            | INT . IDENTIFIER ';'

    ID  shift, and go to state 23

    IDENTIFIER  go to state 7


State 28

    5 DECLARATION: FLOAT . IDENTIFIER ';' DECLARATION
    7            | FLOAT . IDENTIFIER ';'

    ID  shift, and go to state 23

    IDENTIFIER  go to state 9


State 29

    4 DECLARATION: INT IDENTIFIER ';' DECLARATION .

    $default  reduce using rule 4 (DECLARATION)


State 30

   14 FUNCTION: FLOAT ID '(' PARAMETER . ')' COMPOUNDSTMT FUNCTION
   15         | FLOAT ID '(' PARAMETER . ')' COMPOUNDSTMT

    ')'  shift, and go to state 35


State 31

    5 DECLARATION: FLOAT IDENTIFIER ';' DECLARATION .

    $default  reduce using rule 5 (DECLARATION)


State 32

    8 IDENTIFIER: ID '[' INTNUM ']' . ',' IDENTIFIER
   10           | ID '[' INTNUM ']' .

    ','  shift, and go to state 36

    $default  reduce using rule 10 (IDENTIFIER)


State 33

   16 PARAMETER: INT IDENTIFIER . PARAMETER
   17          | INT IDENTIFIER .

    INT  shift, and go to state 25

    $default  reduce using rule 17 (PARAMETER)

    PARAMETER  go to state 37


State 34

   12 FUNCTION: INT ID '(' PARAMETER ')' . COMPOUNDSTMT FUNCTION
   13         | INT ID '(' PARAMETER ')' . COMPOUNDSTMT

    '{'  shift, and go to state 38

    COMPOUNDSTMT  go to state 39


State 35

   14 FUNCTION: FLOAT ID '(' PARAMETER ')' . COMPOUNDSTMT FUNCTION
   15         | FLOAT ID '(' PARAMETER ')' . COMPOUNDSTMT

    '{'  shift, and go to state 38

    COMPOUNDSTMT  go to state 40


State 36
